Change default place

--- a/config/config.ini.Example
+++ b/config/config.ini.Example
@@ -14,7 +14,7 @@ admin-id = "TELEGRAMID"
 lang = "de"     ; "de" or "en" possible
 log = true
 sticker = true
-place = NoPlace
+place = Default
 
 [webinterface]
 password = 1388
